--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
 			<a href="#contact" class="smoothScroll">Contact</a>
 			<a href="https://www.facebook.com/dwightjaydoane" target="_blank"><i class="icon-facebook"></i></a>
 			<a href="https://twitter.com/DwightDoane" target="_blank"><i class="icon-twitter"></i></a>
+      <a href="http://github.com/imdwit" target="_blank"><i class="icon-github"></i></a>
 			<a href="mailto:dwightdoane@me.com"><i class="icon-envelope"></i></a>
 		</div>
 
@@ -66,9 +67,6 @@
 				<br>
 				<h3>An amateur web developer</h3>
 				<br>
-				<br>
-				<div class="col-lg-6 col-lg-offset-3">
-				</div>
 			</div>
 		</div><!-- /container -->
 	</div><!-- /headerwrap -->
@@ -80,7 +78,7 @@
 	<div id="f">
 		<div class="container">
 			<div class="row">
-				<h3>ABOUT ME</h3>
+				<h3>About</h3>
 				<p class="centered"><i class="icon icon-circle"></i><i class="icon icon-circle"></i><i class="icon icon-circle"></i></p>
 
 				<!-- INTRO INFORMATIO-->
@@ -95,39 +93,36 @@
 	</div><!-- /f -->
 
 
-	<!-- ========== CAROUSEL SECTION ========== --
+	<!-- ========== CAROUSEL SECTION ========== -->
 	<section id="portfolio" name="portfolio"></section>
 	<div id="f">
 		<div class="container">
 			<div class="row centered">
-				<h3>SOME PROJECTS</h3>
+				<h3>My Projects</h3>
 				<p class="centered"><i class="icon icon-circle"></i><i class="icon icon-circle"></i><i class="icon icon-circle"></i></p>
 
 				<div class="col-lg-6 col-lg-offset-3">
 					<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-						<!-- Wrapper for slides --
+						<!-- Wrapper for slides -->
 						<div class="carousel-inner">
 							<div class="item active centered">
-								<img class="img-responsive" src="assets/img/c1.png" alt="">
+								<a href="http://emailitfor.us" target="_blank"><img class="img-responsive" src="assets/img/eifu.png" alt="Emailitfor.us"></a>
 							</div>
 							<div class="item centered">
-								<img class="img-responsive" src="assets/img/c2.png" alt="">
+								<a href="https://github.com/imdwit/PostSavr-for-Tumblr" target="_blank"><img class="img-responsive" src="assets/img/postsavr.png" alt="Tumblr extension"></a>
 							</div>
-							<div class="item centered">
-								<img class="img-responsive" src="assets/img/c3.png" alt="">
-							</div>
+
 						</div>
 						<br>
 						<br>
 						<ol class="carousel-indicators">
 						    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
 						    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-						    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
 						</ol>
 					</div>
-				</div><!-- col-lg-8 --
-			</div><!-- row --
-		</div><!-- container --
+				</div><!-- col-lg-8 -->
+			</div><!-- row -->
+		</div><!-- container -->
 	</div>	<!-- f -->
 
 	<!-- ========== CONTACT SECTION ========== -->
