--- a/index.html
+++ b/index.html
@@ -111,6 +111,9 @@
 							<div class="item centered">
 								<a href="https://github.com/imdwit/PostSavr-for-Tumblr" target="_blank"><img class="img-responsive" src="assets/img/postsavr.png" alt="Tumblr extension"></a>
 							</div>
+              <div class="item centered">
+                <a href="http://0lli.com" target="_blank"><img class="img-responsive" src="assets/img/olli.png" alt="Olli"></a>
+              </div>
 
 						</div>
 						<br>
@@ -118,6 +121,7 @@
 						<ol class="carousel-indicators">
 						    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
 						    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+                <li data-target="#carousel-example-generic" data-slide-to="2"></li>
 						</ol>
 					</div>
 				</div><!-- col-lg-8 -->
