--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 								<a href="https://github.com/imdwit/PostSavr-for-Tumblr" target="_blank"><img class="img-responsive" src="assets/img/postsavr.png" alt="Tumblr extension"></a>
 							</div>
               <div class="item centered">
-                <a href="http://0lli.com" target="_blank"><img class="img-responsive" src="assets/img/olli.png" alt="Olli"></a>
+                <a href="http://0lli.com" target="_blank"><img class="img-responsive" src="assets/img/olli.PNG" alt="Olli"></a>
               </div>
 						</div>
 						<br>
