--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 			<div class="row">
 				<h1>I am Dwight</h1>
 				<br>
-				<h3>An amateur web developer</h3>
+				<h3>I'm in love with the web</h3>
 				<br>
 			</div>
 		</div><!-- /container -->
@@ -85,7 +85,7 @@
 				<div class="col-lg-6 col-lg-offset-3">
 					<p>I am from Central Florida.</p>
 					<p>Going to school for Computer Science.</p>
-					<p>I make things for the web. Such as web apps, browser extensions, bookmarklets, and more.</p>
+					<p>I make things for the web.</p>
 					<p>I'm in love with javascript.</p>
 				</div>
 			</div>
