--- a/index.html
+++ b/index.html
@@ -14,12 +14,10 @@
 
     <!-- Custom styles for this template -->
     <link href="assets/css/main.css" rel="stylesheet">
-	<link rel="stylesheet" href="assets/css/font-awesome.min.css">
+	  <link rel="stylesheet" href="assets/css/font-awesome.min.css">
 
     <script src="assets/js/jquery.min.js"></script>
-	<script src="assets/js/modernizr.custom.js"></script>
-
-
+	  <script src="assets/js/modernizr.custom.js"></script>
 
     <link href='http://fonts.googleapis.com/css?family=Oswald:400,300,700' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=EB+Garamond' rel='stylesheet' type='text/css'>
@@ -30,7 +28,6 @@
       <script src="assets/js/respond.min.js"></script>
     <![endif]-->
   </head>
-
   <body data-spy="scroll" data-offset="0" data-target="#theMenu">
 
 	<!-- Menu -->
@@ -63,9 +60,9 @@
 			</div>
 			<br>
 			<div class="row">
-				<h1>I am Dwight</h1>
+				<h2>Hi my name's Dwight</h2>
 				<br>
-				<h3>I'm in love with the web</h3>
+				<h3>& I'm in love with the web</h3>
 				<br>
 			</div>
 		</div><!-- /container -->
@@ -83,10 +80,10 @@
 
 				<!-- INTRO INFORMATIO-->
 				<div class="col-lg-6 col-lg-offset-3">
-					<p>I am from Central Florida.</p>
+          <p>I'm a freelance web developer based in Central Florida.</p>
 					<p>Going to school for Computer Science.</p>
 					<p>I make things for the web.</p>
-					<p>I'm in love with javascript.</p>
+					<p>I absolutely love javascript.</p>
 				</div>
 			</div>
 		</div><!-- /container -->
