--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 			<div class="row">
 				<h2>Hi my name's Dwight</h2>
 				<br>
-				<h3>& I'm in love with the web</h3>
+				<h3>and I'm in love with the web</h3>
 				<br>
 			</div>
 		</div><!-- /container -->
