--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
 			</div>
 			<br>
 			<div class="row">
-				<h2>Hi my name's Dwight</h2>
+				<h1>Hi my name's Dwight</h1>
 				<br>
-				<h3>and I'm in love with the web</h3>
+				<h3>& I'm in love with the web</h3>
 				<br>
 			</div>
 		</div><!-- /container -->
