--- a/index.html
+++ b/index.html
@@ -3,161 +3,32 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="Portfolio site of Dwight Doane">
     <link rel="shortcut icon" href="assets/ico/favicon.png">
-
-    <title>Dwit</title>
-
-    <!-- Bootstrap core CSS -->
-    <link href="assets/css/bootstrap.css" rel="stylesheet">
-
-    <!-- Custom styles for this template -->
-    <link href="assets/css/main.css" rel="stylesheet">
-	  <link rel="stylesheet" href="assets/css/font-awesome.min.css">
-
-    <script src="assets/js/jquery.min.js"></script>
-	  <script src="assets/js/modernizr.custom.js"></script>
-
-    <link href='http://fonts.googleapis.com/css?family=Oswald:400,300,700' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=EB+Garamond' rel='stylesheet' type='text/css'>
-
-    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="assets/js/html5shiv.js"></script>
-      <script src="assets/js/respond.min.js"></script>
-    <![endif]-->
+    <title>Dwight</title>
+    <link rel="apple-touch-icon" sizes="57x57" href="./favicons/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="./favicons/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="./favicons/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="./favicons/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="./favicons/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="./favicons/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="./favicons/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="./favicons/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="./favicons/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192"  href="./favicons/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./favicons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="./favicons/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./favicons/favicon-16x16.png">
+    <link rel="manifest" href="./favicons/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="./favicons/ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
+    <link href="./css/style.css" rel="stylesheet" type="text/css" />
   </head>
-  <body data-spy="scroll" data-offset="0" data-target="#theMenu">
-
-	<!-- Menu -->
-	<nav class="menu" id="theMenu">
-		<div class="menu-wrap">
-			<h1 class="logo"><a href="index.html#home">Dwit</a></h1>
-			<i class="icon-remove menu-close"></i>
-			<a href="#home" class="smoothScroll">Home</a>
-			<a href="#about" class="smoothScroll">About</a>
-			<a href="#portfolio" class="smoothScroll">Portfolio</a>
-			<a href="#contact" class="smoothScroll">Contact</a>
-			<a href="https://www.facebook.com/dwightjaydoane" target="_blank"><i class="icon-facebook"></i></a>
-			<a href="https://twitter.com/DwightDoane" target="_blank"><i class="icon-twitter"></i></a>
-      <a href="http://github.com/imdwit" target="_blank"><i class="icon-github"></i></a>
-			<a href="mailto:dwightdoane@me.com"><i class="icon-envelope"></i></a>
-		</div>
-
-		<!-- Menu button -->
-		<div id="menuToggle"><i class="icon-reorder"></i></div>
-	</nav>
-
-
-
-	<!-- ========== HEADER SECTION ========== -->
-	<section id="home" name="home"></section>
-	<div id="headerwrap">
-		<div class="container">
-			<div class="logo">
-				<img src="assets/img/logo.png">
-			</div>
-			<br>
-			<div class="row">
-				<h1>Hi my name's Dwight</h1>
-				<br>
-				<h3>& I'm in love with the web</h3>
-				<br>
-			</div>
-		</div><!-- /container -->
-	</div><!-- /headerwrap -->
-
-
-
-	<!-- ========== ABOUT SECTION ========== -->
-	<section id="about" name="about"></section>
-	<div id="f">
-		<div class="container">
-			<div class="row">
-				<h3>About</h3>
-				<p class="centered"><i class="icon icon-circle"></i><i class="icon icon-circle"></i><i class="icon icon-circle"></i></p>
-
-				<!-- INTRO INFORMATIO-->
-				<div class="col-lg-6 col-lg-offset-3">
-          <p>I'm a freelance web developer based in Central Florida.</p>
-					<p>Going to school for Computer Science.</p>
-					<p>I make things for the web.</p>
-					<p>I absolutely love javascript.</p>
-				</div>
-			</div>
-		</div><!-- /container -->
-	</div><!-- /f -->
-
-
-	<!-- ========== CAROUSEL SECTION ========== -->
-	<section id="portfolio" name="portfolio"></section>
-	<div id="f">
-		<div class="container">
-			<div class="row centered">
-				<h3>My Projects</h3>
-				<p class="centered"><i class="icon icon-circle"></i><i class="icon icon-circle"></i><i class="icon icon-circle"></i></p>
-
-				<div class="col-lg-6 col-lg-offset-3">
-					<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-						<!-- Wrapper for slides -->
-						<div class="carousel-inner">
-              <div class="item centered">
-                  <a href="http://0lli.com" target="_blank"><img class="img-responsive" src="assets/img/olli.PNG" alt="Olli"></a>
-                </div>
-							<div class="item active centered">
-								<a href="http://emailitfor.us" target="_blank"><img class="img-responsive" src="assets/img/eifu.png" alt="Emailitfor.us"></a>
-							</div>
-							<div class="item centered">
-								<a href="https://github.com/imdwit/PostSavr-for-Tumblr" target="_blank"><img class="img-responsive" src="assets/img/postsavr.png" alt="Tumblr extension"></a>
-							</div>
-						</div>
-						<br>
-						<br>
-						<ol class="carousel-indicators">
-						    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-						    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-                <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-						</ol>
-					</div>
-				</div><!-- col-lg-8 -->
-			</div><!-- row -->
-		</div><!-- container -->
-	</div>	<!-- f -->
-
-	<!-- ========== CONTACT SECTION ========== -->
-	<section id="contact" name="contact"></section>
-	<div id="f">
-		<div class="container">
-			<div class="row">
-				<h3>CONTACT ME</h3>
-				<p class="centered"><i class="icon icon-circle"></i><i class="icon icon-circle"></i><i class="icon icon-circle"></i></p>
-
-				<div class="col-lg-6 col-lg-offset-3">
-					<p>904-330-8499</p>
-					<p>dwightdoane@me.com</p>
-					<form role="form" action="//www.emailitfor.us/sendit" method="post">
-  <div class="form-group">
-    <textarea name="message" class="form-control" placeholder="Message" required></textarea>
-  </div>
-  <div class="form-group">
-    <input name="from" type="email" class="form-control col-xs-4" placeholder="Email" required>
-  </div>
-    <input class="btn btn-default " type="submit" value="Submit" style="margin-top: 12px !important;">
-</form>
-				</div>
-			</div>
-		</div>
-	</div>
-
-
-
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-	<script src="assets/js/classie.js"></script>
-    <script src="assets/js/bootstrap.min.js"></script>
-    <script src="assets/js/smoothscroll.js"></script>
-	<script src="assets/js/main.js"></script>
-</body>
+  <body>
+    <div class="" id="wrapper">
+      <h1 id="banner">Coming Soon</h1>
+      <p>Dwight Doane</p>
+    </div>
+  </body>
 </html>
