--- a/index.html
+++ b/index.html
@@ -1,35 +1,109 @@
-
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Portfolio site of Dwight Doane">
-    <link rel="shortcut icon" href="assets/ico/favicon.png">
-    <title>Dwight</title>
-    <link rel="apple-touch-icon" sizes="57x57" href="./favicons/apple-icon-57x57.png">
-    <link rel="apple-touch-icon" sizes="60x60" href="./favicons/apple-icon-60x60.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="./favicons/apple-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="./favicons/apple-icon-76x76.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="./favicons/apple-icon-114x114.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="./favicons/apple-icon-120x120.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="./favicons/apple-icon-144x144.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="./favicons/apple-icon-152x152.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="./favicons/apple-icon-180x180.png">
-    <link rel="icon" type="image/png" sizes="192x192"  href="./favicons/android-icon-192x192.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="./favicons/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="./favicons/favicon-96x96.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="./favicons/favicon-16x16.png">
-    <link rel="manifest" href="./favicons/manifest.json">
-    <meta name="msapplication-TileColor" content="#ffffff">
-    <meta name="msapplication-TileImage" content="./favicons/ms-icon-144x144.png">
-    <meta name="theme-color" content="#ffffff">
-    <link href="./css/style.css" rel="stylesheet" type="text/css" />
 
-  <body>
-    <div class="" id="wrapper">
-      <h1 id="banner">Coming Soon</h1>
-      <p>Dwight Doane</p>
-    </div>
-  </body>
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="description" content="Portfolio site of Dwight Doane">
+	<link rel="shortcut icon" href="assets/ico/favicon.png">
+	<title>Dwight</title>
+	<link rel="apple-touch-icon" sizes="57x57" href="./favicons/apple-icon-57x57.png">
+	<link rel="apple-touch-icon" sizes="60x60" href="./favicons/apple-icon-60x60.png">
+	<link rel="apple-touch-icon" sizes="72x72" href="./favicons/apple-icon-72x72.png">
+	<link rel="apple-touch-icon" sizes="76x76" href="./favicons/apple-icon-76x76.png">
+	<link rel="apple-touch-icon" sizes="114x114" href="./favicons/apple-icon-114x114.png">
+	<link rel="apple-touch-icon" sizes="120x120" href="./favicons/apple-icon-120x120.png">
+	<link rel="apple-touch-icon" sizes="144x144" href="./favicons/apple-icon-144x144.png">
+	<link rel="apple-touch-icon" sizes="152x152" href="./favicons/apple-icon-152x152.png">
+	<link rel="apple-touch-icon" sizes="180x180" href="./favicons/apple-icon-180x180.png">
+	<link rel="icon" type="image/png" sizes="192x192" href="./favicons/android-icon-192x192.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="./favicons/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="96x96" href="./favicons/favicon-96x96.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="./favicons/favicon-16x16.png">
+	<link rel="manifest" href="./favicons/manifest.json">
+	<meta name="msapplication-TileColor" content="#ffffff">
+	<meta name="msapplication-TileImage" content="./favicons/ms-icon-144x144.png">
+	<meta name="theme-color" content="#ffffff">
+	<link href="./css/bootstrap.min.css" rel="stylesheet" type="text/css" />
+	<link href="./css/style.css" rel="stylesheet" type="text/css" />
+
+	<body>
+		<div class="navbar">
+			<ul class="nav">
+				<li><a href="#info">Info</a></li>
+				<li><a href="#work">Work</a></li>
+				<li><a href="#contact">Contact</a></li>
+			</ul>
+		</div>
+
+		<section class="content container-fluid first" id="info">
+
+			<div class="row intro">
+				<div class="col-sm-offset-2 col-sm-8">
+					<h1 class="uppercase  text-center">Dwight Doane</h1>
+					<p class=" text-center">A JavaScript developer && Computer Science student from Central Florida</p>
+
+				</div>
+			</div>
+
+		</section>
+		<section class="content container" id="work">
+			<div class="row middle">
+				<div class="col-sm-6 col-xs-12">
+					<h4 class="text-center">Skills && Experience</h4>
+
+					<div class="col-sm-5 col-sm-offset-1 col-xs-6">
+						<p class="lead">Javascript:</p>
+						<div class="col-xs-offset-1">
+							<p>Vanilla</p>
+							<p>jQuery</p>
+							<p>Angular</p>
+							<p>Backbone</p>
+							<p>Underscore</p>
+							<p>Meteor</p>
+							<p>Node</p>
+						</div>
+					</div>
+
+					<div class="col-sm-5 col-sm-offset-1 col-xs-6">
+						<p class="lead">And:</p>
+						<div class="col-xs-offset-1">
+							<p>HTML5</p>
+							<p>CSS3</p>
+							<p>Bootstrap</p>
+							<p>Git</p>
+							<p>Mongodb</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-sm-6 col-xs-12">
+					<h4 class="text-center">Projects</h4>
+
+				</div>
+			</div>
+		</section>
+		<section class="content container-fluid" id="contact">
+			<div class="row middle">
+				<div class="col-sm-offset-1 col-sm-5">
+					<p class="lead">More Info:</p>
+					<div class="col-xs-offset-1">
+						<p>I daily a 91 Mazda Miata</p>
+						<p>I like to drive fast</p>
+						<p>I have 2 cats</p>
+					</div>
+					<ul class="inline">
+						<li><a href="#">Github</a></li>
+						<li><a href="#">CodePen</a></li>
+					</ul>
+				</div>
+				<div class="col-sm-offset-1 col-sm-5">
+					<p class="lead">If you'd like to know more</p>
+					<textarea></textarea>
+					<input type="submit" value="Send it" />
+				</div>
+			</div>
+		</section>
+
+	</body>
+
 </html>
