--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
 			</ul>
 		</div>
 
-		<section class="content container-fluid first" id="info">
+		<section class="content  first" id="info">
 
-			<div class="row intro">
+			<div class="row intro container-fluid">
 				<div class="col-sm-offset-2 col-sm-8">
 					<h1 class="uppercase  text-center">Dwight Doane</h1>
 					<p class=" text-center">A JavaScript developer && Computer Science student from Central Florida</p>
@@ -47,10 +47,37 @@
 			</div>
 
 		</section>
-		<section class="content container" id="work">
-			<div class="row middle">
+		<section class="content " id="work">
+			<div class="row middle container-fluid">
 				<div class="col-sm-6 col-xs-12">
 					<h4 class="text-center">Skills && Experience</h4>
+
+					<div class="col-sm-5 col-sm-offset-1 col-xs-6">
+						<p class="lead text-center">Javascript:</p>
+						<div class="col-xs-offset-1">
+							<p>Vanilla</p>
+							<p>jQuery</p>
+							<p>Angular</p>
+							<p>Backbone</p>
+							<p>Underscore</p>
+							<p>Meteor</p>
+							<p>Node</p>
+						</div>
+					</div>
+
+					<div class="col-sm-5 col-sm-offset-1 col-xs-6">
+						<p class="lead text-center">And:</p>
+						<div class="col-xs-offset-1">
+							<p>HTML5</p>
+							<p>CSS3</p>
+							<p>Bootstrap</p>
+							<p>Git</p>
+							<p>Mongodb</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-sm-6 col-xs-12">
+					<h4 class="text-center">Projects</h4>
 
 					<div class="col-sm-5 col-sm-offset-1 col-xs-6">
 						<p class="lead">Javascript:</p>
@@ -76,14 +103,10 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-sm-6 col-xs-12">
-					<h4 class="text-center">Projects</h4>
-
-				</div>
 			</div>
 		</section>
-		<section class="content container-fluid" id="contact">
-			<div class="row middle">
+		<section class="content " id="contact">
+			<div class="row middle container-fluid">
 				<div class="col-sm-offset-1 col-sm-5">
 					<p class="lead">More Info:</p>
 					<div class="col-xs-offset-1">
