--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="Portfolio site of Dwight Doane">
-	<link rel="shortcut icon" href="assets/ico/favicon.png">
+	<!-- <link rel="shortcut icon" href="assets/ico/favicon.png"> -->
 	<title>Dwight</title>
-	<link rel="apple-touch-icon" sizes="57x57" href="./favicons/apple-icon-57x57.png">
+	<!-- <link rel="apple-touch-icon" sizes="57x57" href="./favicons/apple-icon-57x57.png">
 	<link rel="apple-touch-icon" sizes="60x60" href="./favicons/apple-icon-60x60.png">
 	<link rel="apple-touch-icon" sizes="72x72" href="./favicons/apple-icon-72x72.png">
 	<link rel="apple-touch-icon" sizes="76x76" href="./favicons/apple-icon-76x76.png">
@@ -23,7 +23,7 @@
 	<link rel="manifest" href="./favicons/manifest.json">
 	<meta name="msapplication-TileColor" content="#ffffff">
 	<meta name="msapplication-TileImage" content="./favicons/ms-icon-144x144.png">
-	<meta name="theme-color" content="#ffffff">
+	<meta name="theme-color" content="#ffffff"> -->
 	<link href="./css/bootstrap.min.css" rel="stylesheet" type="text/css" />
 	<link href="./css/style.css" rel="stylesheet" type="text/css" />
 
