adds ncsoccer to projects

--- a/index.html
+++ b/index.html
@@ -78,29 +78,12 @@
 				</div>
 				<div class="col-sm-6 col-xs-12">
 					<h4 class="text-center">Projects</h4>
-
-					<div class="col-sm-5 col-sm-offset-1 col-xs-6">
-						<p class="lead">Javascript:</p>
-						<div class="col-xs-offset-1">
-							<p>Vanilla</p>
-							<p>jQuery</p>
-							<p>Angular</p>
-							<p>Backbone</p>
-							<p>Underscore</p>
-							<p>Meteor</p>
-							<p>Node</p>
-						</div>
+					<div class="col-md-6 col-md-offset-3">
+						<a href="http://ncsoccermatch.com" target="_blank"><img class="img-responsive" src="./imgs/nc.jpg"></a>
+						<p class="text-center"><a href="http://ncsoccermatch.com" target="_blank">NC Soccer Match</a></p>
 					</div>
-
-					<div class="col-sm-5 col-sm-offset-1 col-xs-6">
-						<p class="lead">And:</p>
-						<div class="col-xs-offset-1">
-							<p>HTML5</p>
-							<p>CSS3</p>
-							<p>Bootstrap</p>
-							<p>Git</p>
-							<p>Mongodb</p>
-						</div>
+					<div class="col-xs-12">
+						<p class="text-right">More soon...</p>
 					</div>
 				</div>
 			</div>
