adds scifi-ui to projects

--- a/index.html
+++ b/index.html
@@ -78,9 +78,27 @@
 				</div>
 				<div class="col-sm-6 col-xs-12">
 					<h4 class="text-center">Projects</h4>
-					<div class="col-md-6 col-md-offset-3">
-						<a href="http://ncsoccermatch.com" target="_blank"><img class="img-responsive" src="./imgs/nc.jpg"></a>
-						<p class="text-center"><a href="http://ncsoccermatch.com" target="_blank">NC Soccer Match</a></p>
+					<div class="col-md-6">
+						<div class="project-wrapper">
+							<a href="http://ncsoccermatch.com" target="_blank">
+								<img class="img-responsive" src="./imgs/nc.jpg">
+							</a>
+							<p class="text-center"><a href="http://ncsoccermatch.com" target="_blank">NC Soccer Match</a></p>
+							<p>
+								<small>#client</small>
+							</p>
+						</div>
+					</div>
+					<div class="col-md-6">
+						<div class="project-wrapper">
+							<a href="http://scifi-ui.com" target="_blank">
+								<img class="img-responsive" src="./imgs/rocket.png">
+							</a>
+							<p class="text-center"><a href="http://scifi-ui.com" target="_blank">Scifi-UI</a></p>
+							<p>
+								<small>#mine</small>
+							</p>
+						</div>
 					</div>
 					<div class="col-xs-12">
 						<p class="text-right">More soon...</p>
