--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 			<div class="row middle container-fluid">
 				<div class="col-sm-offset-1 col-sm-5">
 					<p class="lead text-center">More Info:</p>
-					<div class="col-xs-offset-1">
+					<div class="text-center">
 						<p>I daily a 91 Mazda Miata</p>
 						<p>I like to drive fast</p>
 						<p>I have 2 cats</p>
