--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
 							<p>Backbone</p>
 							<p>Underscore</p>
 							<p>Meteor</p>
+							<p>React</p>
 							<p>Node</p>
 						</div>
 					</div>
@@ -70,6 +71,7 @@
 						<div class="col-xs-offset-1">
 							<p>HTML5</p>
 							<p>CSS3</p>
+							<p>SASS</p>
 							<p>Bootstrap</p>
 							<p>Git</p>
 							<p>Mongodb</p>
@@ -78,17 +80,6 @@
 				</div>
 				<div class="col-sm-6 col-xs-12">
 					<h4 class="text-center">Projects</h4>
-					<div class="col-md-6">
-						<div class="project-wrapper">
-							<a href="http://ncsoccermatch.com" target="_blank">
-								<img class="img-responsive" src="./imgs/nc.jpg">
-							</a>
-							<p class="text-center"><a href="http://ncsoccermatch.com" target="_blank">NC Soccer Match</a></p>
-							<p>
-								<small>#client</small>
-							</p>
-						</div>
-					</div>
 					<div class="col-md-6">
 						<div class="project-wrapper">
 							<a href="http://scifi-ui.com" target="_blank">
@@ -111,9 +102,10 @@
 				<div class="col-sm-offset-1 col-sm-5">
 					<p class="lead text-center">More Info:</p>
 					<div class="text-center">
-						<p>I daily a 91 Mazda Miata</p>
+						<p>I'm Mazda Miata enthusiast</p>
 						<p>I like to drive fast</p>
 						<p>I have 2 cats</p>
+						<p>I work for Startup Media</p>
 					</div>
 					<ul class="inline">
 						<li><a href="https://github.com/imdwit" target="_blank">Github</a></li>
