just a quick update to my site. more coming soon

--- a/index.html
+++ b/index.html
@@ -5,125 +5,50 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="Portfolio site of Dwight Doane">
-	<!-- <link rel="shortcut icon" href="assets/ico/favicon.png"> -->
 	<title>Dwight</title>
-	<!-- <link rel="apple-touch-icon" sizes="57x57" href="./favicons/apple-icon-57x57.png">
-	<link rel="apple-touch-icon" sizes="60x60" href="./favicons/apple-icon-60x60.png">
-	<link rel="apple-touch-icon" sizes="72x72" href="./favicons/apple-icon-72x72.png">
-	<link rel="apple-touch-icon" sizes="76x76" href="./favicons/apple-icon-76x76.png">
-	<link rel="apple-touch-icon" sizes="114x114" href="./favicons/apple-icon-114x114.png">
-	<link rel="apple-touch-icon" sizes="120x120" href="./favicons/apple-icon-120x120.png">
-	<link rel="apple-touch-icon" sizes="144x144" href="./favicons/apple-icon-144x144.png">
-	<link rel="apple-touch-icon" sizes="152x152" href="./favicons/apple-icon-152x152.png">
-	<link rel="apple-touch-icon" sizes="180x180" href="./favicons/apple-icon-180x180.png">
-	<link rel="icon" type="image/png" sizes="192x192" href="./favicons/android-icon-192x192.png">
-	<link rel="icon" type="image/png" sizes="32x32" href="./favicons/favicon-32x32.png">
-	<link rel="icon" type="image/png" sizes="96x96" href="./favicons/favicon-96x96.png">
-	<link rel="icon" type="image/png" sizes="16x16" href="./favicons/favicon-16x16.png">
-	<link rel="manifest" href="./favicons/manifest.json">
-	<meta name="msapplication-TileColor" content="#ffffff">
-	<meta name="msapplication-TileImage" content="./favicons/ms-icon-144x144.png">
-	<meta name="theme-color" content="#ffffff"> -->
-	<link href="./css/bootstrap.min.css" rel="stylesheet" type="text/css" />
+  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
 	<link href="./css/style.css" rel="stylesheet" type="text/css" />
 
 	<body>
-		<div class="navbar">
-			<ul class="nav">
-				<li><a href="#info">Info</a></li>
-				<li><a href="#work">Work</a></li>
-				<li><a href="#contact">Contact</a></li>
-			</ul>
-		</div>
+    <section class="container">
+      <h1>Dwight Doane</h1>
+      <h4>Javascript Developer && more</h4>
 
-		<section class="content  first" id="info">
+      <section class="wrapper">
 
-			<div class="row intro container-fluid">
-				<div class="col-sm-offset-2 col-sm-8">
-					<h1 class="uppercase  text-center">Dwight Doane</h1>
-					<p class=" text-center">A JavaScript developer && Computer Science student from Central Florida</p>
+        <div class="wrapper__item">
+          <div class="about">
+            <p class="about__heading">I'm a developer living and working in Central Florida</p>
+            <p class="about__txt">I work at Startup Media</p>
+            <p class="about__txt">I'm also a Teaching Assistant for the UCF Coding Bootcamp</p>
+            <p class="about__txt">I <3 all things javascript</p>
+          </div>
+        </div>
 
-				</div>
-			</div>
+        <div class="wrapper__item">
+          <div class="personal">
+            <p class="personal__heading">Miata enthusiast && cat person</p>
+            <p class="personal__txt">I have 2 miatas ( 91 NA && 00 NB)</p>
+            <p class="personal__txt">I have 2 cats ( Toby && Rupert )</p>
+          </div>
+        </div>
 
-		</section>
-		<section class="content " id="work">
-			<div class="row middle container-fluid">
-				<div class="col-sm-6 col-xs-12">
-					<h4 class="text-center">Skills && Experience</h4>
+      </section>
 
-					<div class="col-sm-5 col-sm-offset-1 col-xs-6">
-						<p class="lead text-center">Javascript:</p>
-						<div class="col-xs-offset-1">
-							<p>Vanilla</p>
-							<p>jQuery</p>
-							<p>Angular</p>
-							<p>Backbone</p>
-							<p>Underscore</p>
-							<p>Meteor</p>
-							<p>React</p>
-							<p>Node</p>
-						</div>
-					</div>
-
-					<div class="col-sm-5 col-sm-offset-1 col-xs-6">
-						<p class="lead text-center">And:</p>
-						<div class="col-xs-offset-1">
-							<p>HTML5</p>
-							<p>CSS3</p>
-							<p>SASS</p>
-							<p>Bootstrap</p>
-							<p>Git</p>
-							<p>Mongodb</p>
-						</div>
-					</div>
-				</div>
-				<div class="col-sm-6 col-xs-12">
-					<h4 class="text-center">Projects</h4>
-					<div class="col-md-6">
-						<div class="project-wrapper">
-							<a href="http://scifi-ui.com" target="_blank">
-								<img class="img-responsive" src="./imgs/rocket.png">
-							</a>
-							<p class="text-center"><a href="http://scifi-ui.com" target="_blank">Scifi-UI</a></p>
-							<p>
-								<small>#mine</small>
-							</p>
-						</div>
-					</div>
-					<div class="col-xs-12">
-						<p class="text-right">More soon...</p>
-					</div>
-				</div>
-			</div>
-		</section>
-		<section class="content " id="contact">
-			<div class="row middle container-fluid">
-				<div class="col-sm-offset-1 col-sm-5">
-					<p class="lead text-center">More Info:</p>
-					<div class="text-center">
-						<p>I'm Mazda Miata enthusiast</p>
-						<p>I like to drive fast</p>
-						<p>I have 2 cats</p>
-						<p>I work for Startup Media</p>
-					</div>
-					<ul class="inline">
-						<li><a href="https://github.com/imdwit" target="_blank">Github</a></li>
-						<li><a href="http://codepen.io/imdwit/" target="_blank">CodePen</a></li>
-					</ul>
-				</div>
-				<div class="col-sm-offset-1 col-sm-5">
-					<form action="//formspree.io/dwightdoane@me.com" method="POST">
-						<p class="lead text-center">If you'd like to know more</p>
-						<textarea placeholder="Say Hello" name="message"></textarea>
-						<input type="email" placeholder="email" required name="_replyto" />
-						<input type="hidden" name="_next" value="http://dwit.us" />
-						<input type="text" name="_gotcha" style="display:none" />
-						<input type="submit" value="Send it" id="submit" />
-					</form>
-				</div>
-			</div>
-		</section>
+      <footer>
+        <p class="footer-links">You can find me on:
+          <br class="hidden-lg" />
+          <a class="footer-links__twitter" href="https://twitter.com/DwightDoane" target="_blank">
+            <i class="fa fa-twitter" aria-hidden="true">&nbsp;</i>
+            @dwightdoane</a>
+          <a class="footer-links__github" href="https://github.com/imdwit" target="_blank">
+            <i class="fa fa-github" aria-hidden="true">&nbsp;</i>
+            @imdwit</a>
+          <a class="footer-links__gmail" href="mailto:dwight.j.doane@gmail.com">
+            <i class="fa fa-envelope-o" aria-hidden="true">&nbsp;</i>
+            gmail</a>
+      </footer>
+    </section>
 
 	</body>
 
