adds link to linkedin

--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
           <a class="footer-links__gmail" href="mailto:dwight.j.doane@gmail.com">
             <i class="fa fa-envelope-o" aria-hidden="true">&nbsp;</i>
             gmail</a>
+          <a class="footer-links__linkedin" href="https://www.linkedin.com/in/dwight-doane-678aa9ba" target="_blank">
+            <i class="fa fa-linkedin-square" aria-hidden="true">&nbsp;</i>
+            connect</a>
       </footer>
     </section>
     <script>
