updates twitter url

--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
       <footer>
         <p class="footer-links">You can find me on:
           <br class="hidden-lg" />
-          <a class="footer-links__twitter" href="https://twitter.com/DwightDoane" target="_blank">
+          <a class="footer-links__twitter" href="https://twitter.com/iamdwit" target="_blank">
             <i class="fa fa-twitter" aria-hidden="true">&nbsp;</i>
-            @dwightdoane</a>
+            @iamdwit</a>
           <a class="footer-links__github" href="https://github.com/imdwit" target="_blank">
             <i class="fa fa-github" aria-hidden="true">&nbsp;</i>
             @imdwit</a>
