updates fontaesome and adds link to resume

--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
           <a class="footer-links__linkedin" href="https://www.linkedin.com/in/dwight-doane-678aa9ba" target="_blank">
             <i class="fa fa-linkedin-square" aria-hidden="true">&nbsp;</i>
             connect</a>
+          <a class="footer-links__linkedin" href="resume.html" target="_blank">
+            <i class="fa fa-id-card-o" aria-hidden="true">&nbsp;</i>
+            resume</a>
       </footer>
     </section>
     <script>
@@ -52,6 +55,6 @@
       ga('create', 'UA-80901998-1', 'auto');
       ga('send', 'pageview');
     </script>
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
 	</body>
 </html>
