added some new skills and latest job

--- a/resume.html
+++ b/resume.html
@@ -267,9 +267,32 @@ h4 span:first-child {
 			<div class="row">
 			<div class="col-sm-12">
 				<h4 class="strike-through">
+					<span>Web Benefits Design</span>
+					<span class="date">
+						2017-08-08 — 2017-09-19
+					</span>
+				</h4>
+				<div class="website pull-right">
+					<a href="http://wbdcorp.com">http://wbdcorp.com</a>
+				</div>
+				<div class="position">
+					Frontend Developer
+				</div>
+				<div class="summary">
+					<p>Helped rewrite an aging php application using modern technologies: React, Redux w/middleware (redux-observables, redux-saga)</p>
+				</div>
+				<h4>Highlights</h4>
+				<ul class="highlights">
+					<li class="bullet">Learned a lot about structuring a react/redux application</li>
+					<li class="bullet">Learned the basics of observables with rxjs</li>
+					<li class="bullet">Honed some functional programming skills</li>
+				</ul>
+			</div>
+			<div class="col-sm-12">
+				<h4 class="strike-through">
 					<span>Startup Media</span>
 					<span class="date">
-						2015-11-01 — 
+						2015-11-01 — 2017-07-11
 					</span>
 				</h4>
 				<div class="website pull-right">
@@ -283,17 +306,16 @@ h4 span:first-child {
 				</div>
 				<h4>Highlights</h4>
 				<ul class="highlights">
-					<li class="bullet">Used Angular.js to build gogreenback&#x27;s webapp and webviews for the iOS/android app</li>
+					<li class="bullet">Used Angular.js to build gogreenback&#x27;s webapp, and webviews for the iOS/android app</li>
 					<li class="bullet">Used backbone.js to build an early company website</li>
-					<li class="bullet">Used Node.js and Angular.js to build a client login</li>
-					<li class="bullet"></li>
+					<li class="bullet">Used Node.js and Angular.js to build a client dashboard</li>
 				</ul>
 			</div>
 			<div class="col-sm-12">
 				<h4 class="strike-through">
 					<span>UCF Coding Bootcamp</span>
 					<span class="date">
-						2016-06-23 — 
+						2016-06-23 — 2017-08-16
 					</span>
 				</h4>
 				<div class="website pull-right">
@@ -307,7 +329,7 @@ h4 span:first-child {
 				</div>
 				<h4>Highlights</h4>
 				<ul class="highlights">
-					<li class="bullet">When possible I gave extracurricular lectures and activities to expose students to topics I thought they needed to know. Such as es6 features not covered in the curriculum and git fundamentals</li>
+					<li class="bullet">When possible I gave extracurricular lectures and activities to expose students to topics I thought they needed to know. Such as es6 features and functional programming techniques not covered in the curriculum as well as git fundamentals</li>
 				</ul>
 			</div>
 			<div class="col-sm-12">
@@ -324,7 +346,7 @@ h4 span:first-child {
 					Software Test Engineer
 				</div>
 				<div class="summary">
-					<p>I was responsible for setting up test automation, as well as load testing apis</p>
+					<p>I was responsible for setting up test automation, as well as load testing apis. From setting up unit testing for React components, and End to End testing some user flows.</p>
 				</div>
 			</div>
 			</div>
@@ -485,8 +507,10 @@ h4 span:first-child {
 					<li>mysql</li>
 					<li>angular</li>
 					<li>react</li>
+					<li>redux</li>
 					<li>vue &lt;3</li>
 					<li>git</li>
+					<li>functional programming</li>
 				</ul>
 			</div>
 			</div>
@@ -522,24 +546,31 @@ h4 span:first-child {
 					<h4>Automotive</h4>
 				</div>
 				<ul class="keywords">
-					<li>Miata</li>
+					<li>Miatas</li>
 					<li>Driving fast</li>
+				</ul>
+			</div>
+			<div class="col-sm-6">
+				<div class="name">
+					<h4>Software</h4>
+				</div>
+				<ul class="keywords">
+					<li>functional programming</li>
+					<li>performance</li>
+					<li>a11y</li>
+					<li>dev tools</li>
+					<li>automation</li>
+					<li>IOT</li>
+					<li>node</li>
+					<li>JavaScript</li>
 				</ul>
 			</div>
 			</div>
 		</div>
-		<p>Based on <a href="https://jsonresume.org/" target="_blank">JSON Resume</a></p>
 	</section>
 	
 
 	</div>
-	<script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-      ga('create', 'UA-80901998-1', 'auto');
-      ga('send', 'pageview');
-    </script>
+	
 	</body>
 </html>
