adds sub position

--- a/resume.html
+++ b/resume.html
@@ -322,7 +322,7 @@ h4 span:first-child {
 					<a href="https://codingbootcamp.ce.ucf.edu/">https://codingbootcamp.ce.ucf.edu/</a>
 				</div>
 				<div class="position">
-					Teaching Assistant
+					Substitute Instructor &amp;&amp; Teaching Assistant
 				</div>
 				<div class="summary">
 					<p>&#x27;HTML5, CSS3, JavaScript, jQuery, Node.js, Responsive Design, Heroku, Git, User Authentication, PHP frameworks like Laravel, React.js, MySQL, MongoDB, and more.*&#x27; Shared my experiences and knowledge with students. Helped them learn a wide range of topics. Graded their homework and provided inclass and virtual assistance.</p>
@@ -509,8 +509,10 @@ h4 span:first-child {
 					<li>react</li>
 					<li>redux</li>
 					<li>vue &lt;3</li>
+					<li>vuex</li>
 					<li>git</li>
 					<li>functional programming</li>
+					<li>(learning) elm</li>
 				</ul>
 			</div>
 			</div>
