--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         <div class="wrapper__item">
           <div class="about">
             <p class="about__heading">I'm a developer living and working in Central Florida</p>
-            <p class="about__txt">I work at Startup Media</p>
-            <p class="about__txt">I'm also a Teaching Assistant for the UCF Coding Bootcamp</p>
+            <p class="about__txt">I work at Omicron Media</p>
             <p class="about__txt">I <3 all things javascript</p>
+            <p class="about__txt">I'm learning elm</p>
           </div>
         </div>
         <div class="wrapper__item">
