--- a/index.html
+++ b/index.html
@@ -1,60 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="Portfolio site of Dwight Doane. JavaScript developer.">
-	<title>Dwight</title>
-	<link href="./css/style.css" rel="stylesheet" type="text/css" />
-	<body>
-    <section class="container">
-      <h1>Dwight Doane</h1>
-      <h4>Javascript Developer && more</h4>
-      <section class="wrapper">
-        <div class="wrapper__item">
-          <div class="about">
-            <p class="about__heading">I'm a developer living and working in Central Florida</p>
-            <p class="about__txt">I work at Omicron Media</p>
-            <p class="about__txt">I <3 all things javascript</p>
-            <p class="about__txt">I'm learning elm</p>
-          </div>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Portfolio site of Dwight Doane. JavaScript developer.">
+  <title>Dwight</title>
+  <link href="./css/style.css" rel="stylesheet" type="text/css" />
+
+<body>
+  <section class="container">
+    <h1>Dwight Doane</h1>
+    <h4>Javascript Developer && more</h4>
+    <section class="wrapper">
+      <div class="wrapper__item">
+        <div class="about">
+          <p class="about__heading">I'm a developer living and working in Central Florida</p>
+          <p class="about__txt">I work at Omicron Media</p>
+          <p class="about__txt">I <3 all things javascript</p> <p class="about__txt">I'm learning elm</p>
         </div>
-        <div class="wrapper__item">
-          <div class="personal">
-            <p class="personal__heading">Miata enthusiast && cat person</p>
-            <p class="personal__txt">I have 2 miatas ( 91 NA && 00 NB)</p>
-            <p class="personal__txt">I have 2 cats ( Toby && Rupert )</p>
-          </div>
+      </div>
+      <div class="wrapper__item">
+        <div class="personal">
+          <p class="personal__heading">Miata enthusiast && cat person</p>
+          <p class="personal__txt">I have 2 miatas ( 91 NA && 00 NB)</p>
+          <p class="personal__txt">I have 2 cats ( Toby && Rupert )</p>
         </div>
-      </section>
-      <footer>
-        <p class="footer-links">You can find me on:
-          <br class="hidden-lg" />
-          <a class="footer-links__twitter" href="https://twitter.com/iamdwit" target="_blank">
-            <i class="fa fa-twitter" aria-hidden="true">&nbsp;</i>
-            @iamdwit</a>
-          <a class="footer-links__github" href="https://github.com/imdwit" target="_blank">
-            <i class="fa fa-github" aria-hidden="true">&nbsp;</i>
-            @imdwit</a>
-          <a class="footer-links__gmail" href="mailto:dwight.j.doane@gmail.com">
-            <i class="fa fa-envelope-o" aria-hidden="true">&nbsp;</i>
-            gmail</a>
-          <a class="footer-links__linkedin" href="https://www.linkedin.com/in/dwight-doane-678aa9ba" target="_blank">
-            <i class="fa fa-linkedin-square" aria-hidden="true">&nbsp;</i>
-            connect</a>
-          <a class="footer-links__linkedin" href="resume.html" target="_blank">
-            <i class="fa fa-id-card-o" aria-hidden="true">&nbsp;</i>
-            resume</a>
-      </footer>
+      </div>
     </section>
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    <div>
+      <img class="me" src="https://fooship.imgix.net/484ca00e2215f3f6702baf51a334a4a5" alt="me">
+    </div>
+    <footer>
+      <p class="footer-links">You can find me on:
+        <br class="hidden-lg" />
+        <a class="footer-links__twitter" href="https://twitter.com/iamdwit" target="_blank">
+          <i class="fa fa-twitter" aria-hidden="true">&nbsp;</i>
+          @iamdwit</a>
+        <a class="footer-links__github" href="https://github.com/imdwit" target="_blank">
+          <i class="fa fa-github" aria-hidden="true">&nbsp;</i>
+          @imdwit</a>
+        <a class="footer-links__gmail" href="mailto:dwight.j.doane@gmail.com">
+          <i class="fa fa-envelope-o" aria-hidden="true">&nbsp;</i>
+          gmail</a>
+        <a class="footer-links__linkedin" href="https://www.linkedin.com/in/dwight-doane-678aa9ba" target="_blank">
+          <i class="fa fa-linkedin-square" aria-hidden="true">&nbsp;</i>
+          connect</a>
+        <a class="footer-links__linkedin" href="resume.html" target="_blank">
+          <i class="fa fa-id-card-o" aria-hidden="true">&nbsp;</i>
+          resume</a>
+    </footer>
+  </section>
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
       })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
       ga('create', 'UA-80901998-1', 'auto');
       ga('send', 'pageview');
     </script>
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
-	</body>
+  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
+</body>
+
 </html>
